fixed copilot review comments